# iso24765-pdfium-extractor

./: .clinerules  .gitignore  README.md  pyproject.toml
data/: output.csv  output.json  output.txt
docs/: example.json
src/: __init__.py  data_extractor.py  main.py  pdf_processor.py
tests/: test_data_extractor.py  test_main.py  test_pdf_processor.py
