[project]
name = "iso24765-pdfium-extractor"
version = "0.1.0"
description = ""
authors = [
    {name = "KouMatsumoto"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pypdfium2 (>=4.30.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
