[tool.poetry]
name = "iso24765-pdfium-extractor"
version = "0.1.0"
description = ""
authors = ["KouMatsumoto"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
pypdfium2 = ">=4.30.1,<5.0.0"

[tool.poetry.scripts]
extract = "src.main:main"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
